openshift/demos/ocp-argocd-apps/apps/bgd/bgd-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-demo
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
