openshift/demos/ocp-argocd-apps/apps/bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: apps-demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
